# CPU_EMULATOR

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
cpu_emulator/: Makefile  programm
cpu_emulator/examples/: fibonacci
cpu_emulator/include/: arch.hpp  command.hpp  parser.hpp  utils.hpp
cpu_emulator/src/: arch.cpp  command.cpp  emulator.cpp  parser.cpp  utils.cpp
stack-library/: CMakeLists.txt  Makefile  Stack.cpp  Stack.hpp  logger_class.cpp
tests/: 1-constructors.cpp  2-methods.cpp  3-expand.cpp  4-swap.cpp  4-user-data-type.cpp  5-emplace.cpp  5-user-data-type.cpp  CMakeLists.txt  Makefile
